registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: registry
  name: registry
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    service: registry
