registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/hostname: registry.stefanmuraru.com
spec:
  parentRefs:
    - name: private
      namespace: gateway-system
      sectionName: https
  hostnames:
    - registry.stefanmuraru.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: registry
          port: 5000
